# cloud-pin

./: .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile.default  Dockerfile.rootless  compose.services.yaml  compose.yaml  detect_rootless.sh  devcontainer.json
.devcontainer/configs/: otlp-collector.yaml  prometheus.yml
.github/workflows/: checks.yml
samples/: README.md
samples/_shared/configs/: nginx.conf.template  prometheus.yml
samples/_shared/ssl/: prepare_certs.sh
samples/benchmarks/: README.md  benchmark_report.py  compose.no-sync.yaml  compose.sync.yaml  null_zmq_reader.py
samples/http/: README.md  compose.yaml
samples/nginx/: README.md  compose.yaml
samples/no_sync/: README.md  compose.yaml
samples/ssl/: README.md  compose.yaml
savant_cloudpin/: __main__.py  cfg.py  services.py  signals.py  zmq.py
savant_cloudpin/cfg/: __init__.py  _bootstrap.py  _defaults.py  _models.py  _utils.py
savant_cloudpin/observability/: __init__.py  _health.py  _metrics.py  _otlp.py  _prometheus.py  _utils.py
savant_cloudpin/services/: __init__.py  _base.py  _client.py  _measuring.py  _protocol.py  _server.py  _video_frame.py
savant_cloudpin/services/_pumps/: __init__.py  _inbound.py  _outbound.py
tests/fixtures/: certs.py  clients.py  connections.py  observability.py  pipelines.py  servers.py  zmq.py
tests/helpers/: __init__.py  __main__.py  connections.py  messages.py  openssl.cnf  pipelines.py  ports.py  ssl.py  zmq.py
tests/savant_cloudpin/: conftest.py  test_cfg.py  test_observability.py  test_services.py
tests/savant_cloudpin/cassettes/: test_otlp_metrics[Client].yaml  test_otlp_metrics[Server].yaml
