[project]
name = "savant-cloudpin"
version = "0.1.0"
description = "A service to run Savant pipeline remotely (cloud) via WebSockets (WS)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "omegaconf>=2.3.0",
]

[tool.pyrefly]
site-package-path = ["savant_cloudpin/", "tests/"]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[project.optional-dependencies]
prerequisite_platform = [
  # This is just for visibilty, to track prerequisite packages.
  # Installing those dependecies isn't supposed to work.
  "savant-rs",
]

[dependency-groups]
dev = [
    "faker>=37.11.0",
    "filelock>=3.20.0",
    "pyrefly>=0.37.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]
